umgestellt auf MersenneTwister; GlobalBug umbenannt zu GlobalBlockerBug; diverse weitere Umbauten/Experimente